number7/style.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
li,
span {
  margin: 0;
}

section {
  padding: 50px 0;
}

/* make images responsive */
img {
  display: block;
  max-width: 100%;
  height: auto;
}

button:hover {
  cursor: pointer;
}

body {
  font-family: "Public Sans", sans-serif, Arial !important;
  font-size: 18px;
  line-height: 1.3;
}

p {
  display: block;
  font-weight: 400;
  line-height: 1.5;
  margin-bottom: 1.875rem;
}

hr {
  border: none;
  background-color: rgba(0, 0, 0, 0.1);
  height: 1px;
}

h1 {
  font-family: "Public Sans";
  font-size: 3.5rem;
  font-weight: 400;
  margin-bottom: 1.875rem;
}

h2 {
  font-family: "Public Sans";
  font-size: 2.5rem;
  font-weight: 400;
  margin-bottom: 1.875rem;
}

h3 {
  font-family: "Public Sans";
  font-size: 1.5rem;
  font-weight: 400;
  margin-bottom: 1.875rem;
}

h4 {
  font-family: "Public Sans";
  font-size: 1.2rem;
  font-weight: 400;
  margin-bottom: 1.875rem;
}

h5,
h6 {
  font-size: 2.2em;
  font-weight: 400;
}

:root {
  --color-primary-dark-blue: hsl(233, 26%, 24%);
  --color-primary-lime-green: hsl(136, 65%, 51%);
  --color-primary-bright-cyan: hsl(192, 70%, 51%);

  --color-neutral-grayish-blue: hsl(233, 8%, 62%);
  --color-neutral-light-grayish-blue: hsl(220, 16%, 96%);
  --color-neutral-very-light-gray: hsl(0, 0%, 98%);
  --color-neutral-white: hsl(0, 0%, 100%);
}

header {
  display: flex;
  align-items: center;
  height: 5rem;
  background-color: var(--color-neutral-white);
}

main {
  overflow: hidden;
}

/* footer {
  background-color: var(--color-primary-dark-blue)
} */

.container {
  width: 85%;
  max-width: 1440px;
  margin: 0 auto;
}

.desktop-nav {
  display: none;
}
.mobile-nav {
  display: block;
}

.link,
.link-long {
  color: var(--color-neutral-grayish-blue);
  text-decoration: none;
}

.hero--bg,
.articles--bg {
  background-color: var(--color-neutral-very-light-gray);
}

.easybank--bg {
  background-color: var(--color-neutral-light-grayish-blue);
}

.footer-bg {
  background-color: var(--color-primary-dark-blue);
}

.hero__text {
  max-width: 600px;
  text-align: center;
}

.hero__text h1 {
  font-size: 2rem;
  margin-bottom: 1.175rem;
}

.easybank__text h2 {
  font-size: 2.5rem;
  margin-bottom: 1rem;
}

.easybank__online-text h3,
.easybank__budgeting-text h3,
.easybank__onboarding-text h3,
.easybank__api-text h3 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}

.articles__text h4 {
  font-size: 1.1rem;
  padding-bottom: 1rem;
  padding-top: 0.7rem;
  margin-bottom: 0;
}

.articles__text--normal {
  font-size: 0.938rem;
  margin-bottom: 0;
}

.articles__text--small {
  font-weight: 300;
  font-size: 0.75rem;
  margin-bottom: 0;
}

.articles .container h2{
  font-size: 2rem;
  text-align: center;
}

.hero__text h1,
.easybank__text h2,
.easybank__online-text h3,
.easybank__budgeting-text h3,
.easybank__onboarding-text h3,
.easybank__api-text h3{
  color: var(--color-primary-dark-blue);
}

.hero__text p,
.easybank__text p,
.easybank__online-text p,
.easybank__budgeting-text p,
.easybank__onboarding-text p,
.easybank__api-text p,
.articles__text p {
  color: var(--color-neutral-grayish-blue);
}


.site-button {
  border: none;
  border-radius: 2rem;
  font-family: inherit;
  font-size: 14px;
  padding: 0.8rem 2rem;
  background: linear-gradient(
    90deg,
    var(--color-primary-lime-green),
    40%,
    var(--color-primary-bright-cyan)
  );
  color: var(--color-neutral-white);
  font-weight: 600;
  text-shadow: 0 0px 10px #000;
  transition: 0.2s ease-in-out;
}

.site-button:hover {
  opacity: 0.4;
  transition: opacity 0.2s ease-in-out;
}

.hamburger {
  padding: 15px 15px;
  display: inline-block;
  cursor: pointer;
  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 0;
  overflow: visible;
}
.hamburger:hover {
  opacity: 0.7;
}
.hamburger.is-active:hover {
  opacity: 0.7;
}

.hamburger.is-active .hamburger-inner,
.hamburger.is-active .hamburger-inner::before,
.hamburger.is-active .hamburger-inner::after {
  background-color: #000;
}

.hamburger-box {
  width: 40px;
  height: 24px;
  display: inline-block;
  position: relative;
}

.hamburger-inner {
  display: block;
  top: 50%;
  margin-top: -2px;
}

.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
  width: 40px;
  height: 4px;
  background-color: #000;
  border-radius: 4px;
  position: absolute;
  transition-property: transform;
  transition-duration: 0.15s;
  transition-timing-function: ease;
}

.hamburger-inner::before,
.hamburger-inner::after {
  content: "";
  display: block;
}

.hamburger-inner::before {
  top: -10px;
}

.hamburger-inner::after {
  bottom: -10px;
}

.hamburger--spring .hamburger-inner {
  top: 2px;
  transition: background-color 0s 0.13s linear;
}
.hamburger--spring .hamburger-inner::before {
  top: 10px;
  transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
    transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}
.hamburger--spring .hamburger-inner::after {
  top: 20px;
  transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
    transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--spring.is-active .hamburger-inner {
  transition-delay: 0.22s;
  background-color: transparent !important;
}
.hamburger--spring.is-active .hamburger-inner::before {
  top: 0;
  transition: top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
    transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
  transform: translate3d(0, 10px, 0) rotate(45deg);
}
.hamburger--spring.is-active .hamburger-inner::after {
  top: 0;
  transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
    transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
  transform: translate3d(0, 10px, 0) rotate(-45deg);
}
/* ... */

